<resources>
    <string name="app_name">Layouts</string>
    <string name="to_hint">To</string>
    <string name="send_button">Send</string>
    <string name="message_hint">Message…</string>
    <string name="duck_content_description">a duck</string>
    <string name="duck_text_view">It\'s a duck!</string>
    <string name="not_a_real_one">(not a real one)</string>
    <string name="example_textview">This is a TextView</string>
    <string name="example_text_view_after_click">You already clicked this TextView</string>
    <string name="text_view_clicked_toast">You just clicked the TextView</string>
    <string name="example_edit_text_hint">Type something and see what happens</string>
    <string name="toggle_button_on">Toggled</string>
    <string name="toggle_button_off">Not On</string>
    <string name="checkbox">Bacon</string>
    <string name="example_switch">Lights</string>
</resources>