<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/example_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onTextViewClicked"
        android:text="@string/example_textview" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_views_examples"
        android:ems="16"
        android:hint="@string/example_edit_text_hint"
        android:inputType="text"
        android:onClick="onEditTextClicked"
        tools:ignore="autofill" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_views_examples"
        android:onClick="onToggleButtonClicked"
        android:textOff="@string/toggle_button_off"
        android:textOn="@string/toggle_button_on" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSwitchCompatClicked"
        android:text="@string/example_switch" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckBoxClicked"
        android:text="@string/checkbox" />


</LinearLayout>